Fix slider element initial screen spacing

--- a/elements/upfront-slider/css/uslider_settings.css
+++ b/elements/upfront-slider/css/uslider_settings.css
@@ -176,8 +176,7 @@ background-position: -699px -646px;
 }
 
 .uslider-starting-centered {
-	margin: 15px;
-	padding-top: 10%;
+	margin: 60px;
 }
 
 .uslider-starting-centered .upfront-image-select{
